--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Kuan-Liang Liu
-subtitle: This is what I learned when machine learned!
+subtitle: These are what I learned when machine learned!
 ---
 
 <div class="posts-list">
